<resources>
    <string name="app_name">BusTicket</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="dialog_remember_route">Desea recordar la ruta !</string>
    <string name="dialog_forgot_route">Desea olvidar la ruta!</string>
    <string name="dialogMessageFinalizar">Desea finalizar la ruta !</string>
    <string name="dialogMessagePrint">Esta seguro de quitar la impresora !</string>
    <string name="one_way">Ida</string>
    <string name="back">Vuelta</string>
    <string name="remove_date">Remove Date</string>
    <string name="remember_route">Recordar ruta</string>
    <string name="forget_route">Olvidar ruta</string>
    <string name="loading_hours">Cargando horarios...</string>
    <string name="no_hours_defined_msg">No hay horarios definidos para esta fecha</string>
    <string name="no_hours_available">No hay horarios disponibles</string>
    <string name="intercity">Interurbanos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Siguiente</string>
    <string name="tickets">Tickets</string>
    <string name="update_ticket">Modificar Ticket</string>
    <string name="voucher">Voucher</string>
    <string name="date">Fecha</string>
    <string name="search">Buscar</string>
    <string name="ticket_info">Información del ticket</string>
    <string name="select_chair">Seleccionar Silla</string>
    <string name="devolution">Devolución</string>
    <string name="update">Modificar</string>
    <string name="enter_ticket_number">Ingresa el número de Ticket</string>
    <string name="ticket_number">Número de ticket</string>
    <string name="select_seats">Seleccione los asientos para hacer la devolución</string>

</resources>
