<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_blanco"
    android:paddingTop="16dp"
    tools:context=".menu.UpdateTicketFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnUpdateTicket"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etVoucher"
                style="@style/edit_text_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginTop="32dp"
                android:imeOptions="actionDone"
                android:hint="@string/voucher" />

            <Button
                android:id="@+id/btnSearchTicket"
                style="@style/ButtonCustom"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:paddingStart="48dp"
                android:paddingEnd="48dp"
                android:text="@string/search" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/selectorOneWay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_button_main"
                android:elevation="5dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp">

                <TextView
                    android:id="@+id/tvOneWay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawablePadding="16dp"
                    android:gravity="center_vertical"
                    android:padding="4dp"
                    android:text="@string/date"
                    android:textColor="@color/md_white_1000"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_one_way"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvHourOneDay"
                    app:layout_constraintHorizontal_weight=".4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvHourOneDay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textAlignment="center"
                    android:textColor="@color/md_white_1000"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/removeDateOneWay"
                    app:layout_constraintHorizontal_weight=".4"
                    app:layout_constraintStart_toEndOf="@+id/tvOneWay"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="13:00:00" />

                <ProgressBar
                    android:id="@+id/progressOneWay"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:indeterminateTint="@color/colorPrimary"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/removeDateOneWay"
                    app:layout_constraintStart_toEndOf="@+id/tvOneWay"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/removeDateOneWay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/remove_date"
                    android:padding="2dp"
                    android:src="@drawable/ic_close"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight=".2"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                style="@style/TextInfoPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/ticket_info"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTicketInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/font_main"
                android:textSize="@dimen/size_text"
                android:textAlignment="center"
                android:lineSpacingMultiplier="1.25"
                tools:text="Ruta: Diego Almagro - Salado\nInicio: Diego Almagro" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnUpdateTicket"
        style="@style/ButtonCustom"
        android:layout_margin="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/update_ticket"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>