<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_blanco"
    android:orientation="vertical"
    tools:context=".menu.SelectRutas">

    <include
        android:id="@+id/commonToolbar"
        layout="@layout/common_toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin">

        <Spinner
            android:id="@+id/spUsuarios"
            style="@style/SpnnerCustom"
            android:layout_marginHorizontal="@dimen/margin_horizontal_spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spInicio"
            style="@style/SpnnerCustom"
            android:layout_below="@+id/spUsuarios"
            android:layout_marginHorizontal="@dimen/margin_horizontal_spinner"
            android:layout_marginTop="@dimen/activity_ontenedor_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spUsuarios" />

        <Spinner
            android:id="@+id/spFin"
            style="@style/SpnnerCustom"
            android:layout_below="@+id/spInicio"
            android:layout_marginHorizontal="@dimen/margin_horizontal_spinner"
            android:layout_marginTop="@dimen/activity_ontenedor_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spInicio" />


        <LinearLayout
            android:id="@+id/contenedorCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spFin">

            <CheckBox
                android:id="@+id/cbAsientos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:buttonTint="@color/colorPrimary"
                android:text="Asientos"
                android:textColor="@color/colorAccent" />

            <CheckBox
                android:id="@+id/cbPie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:buttonTint="@color/colorPrimary"
                android:text="De pie"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/contenedorPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:weightSum="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contenedorCheckbox">

            <LinearLayout
                android:id="@+id/contentButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="5"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnRestar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="4"
                    android:background="@drawable/bg_button_count"
                    android:text="-"
                    android:textColor="@color/md_white_1000"
                    android:textSize="@dimen/text_size_button_count" />

                <TextView
                    android:id="@+id/textCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="2"
                    android:text="1"
                    android:textColor="@color/colorGray"
                    android:textSize="@dimen/text_size_count"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/btnSumar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="4"
                    android:background="@drawable/bg_button_count"
                    android:text="+"
                    android:textColor="@color/md_white_1000"
                    android:textSize="@dimen/text_size_button_count" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/contentPrecio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPrecio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/colorGray"
                    android:textSize="@dimen/text_size_price"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnOlvidarRuta"
            style="@style/ButtonCustom"
            android:layout_marginTop="25dp"
            android:text="Olvidar ruta"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contenedorPrecio" />

        <TextView
            android:id="@+id/tvOneWay"
            style="@style/tv_select_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/one_way"
            app:drawableStartCompat="@drawable/ic_one_way"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnOlvidarRuta" />

        <ImageView
            android:id="@+id/removeDateOneWay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/remove_date"
            android:padding="8dp"
            android:src="@drawable/ic_close"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/tvOneWay"
            app:layout_constraintEnd_toEndOf="@+id/tvOneWay"
            app:layout_constraintTop_toTopOf="@+id/tvOneWay" />

        <TextView
            android:id="@+id/tvBack"
            style="@style/tv_select_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/back"
            app:drawableStartCompat="@drawable/ic_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOneWay" />

        <ImageView
            android:id="@+id/removeDateBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/remove_date"
            android:padding="8dp"
            android:src="@drawable/ic_close"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/tvBack"
            app:layout_constraintEnd_toEndOf="@+id/tvBack"
            app:layout_constraintTop_toTopOf="@+id/tvBack" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/salesByDates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="tvBack,tvOneWay"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/mProgressView"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />


        <Button
            android:id="@+id/btnSiguiente"
            style="@style/ButtonCustom"
            android:layout_alignParentBottom="true"
            android:text="Siguiente"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btnFinalizar"
            style="@style/ButtonCustom"
            android:text="Finalizar"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>